# pmr_tp1

./: CMakeLists.txt  README.md  package.xml
config/: bridge.yaml  config.rviz
description/create3/: create3.urdf.xacro  create3_base.urdf.xacro
launch/: parametric_curve.launch.py  path_with_potential.launch.py  potential_function.launch.py  sim_create3.launch.py
launch/include/: control_create3.launch.py
maps/: pot_func_map.pgm  pot_func_map.yaml  test_map.yaml
rviz/: bug.rviz  curve.rviz  path_with_potential.rviz  potential.rviz
src/: parametric_curve.cpp  path_with_potential.cpp  potential_function.cpp  tangent_bug.cpp
worlds/: pot_func_map.sdf  test_map.sdf
worlds/meshes/: pot_func_map.stl  test_map.stl
